# tkhtmlview

./: LICENSE  README.md  example.py  pyproject.toml  setup.py  version.py
.github/: FUNDING.yml
.github/workflows/: publish-to-pypi.yml
tkhtmlview/: __init__.py  html_parser.py  utils.py
