[tool.poetry]
name = "tkhtmlview"
version = "0.1.4"
description = "Display HTML with Tkinter"
authors = ["Palash Bauri <palashbauri1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.28.2"
Pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
