[tool.poetry]
name = "tkhtmlview"
version = "0.3.1"
description = "Display HTML with Tkinter"
authors = ["Palash Bauri <palashbauri1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.4"
Pillow = "^11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
